[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scenes/Systems/WaveManager.gd" type="Script" id=1]

[node name="WaveManager" type="Node2D"]
script = ExtResource( 1 )

[node name="NewWaveWaitTime" type="Timer" parent="."]
wait_time = 30.0

[connection signal="timeout" from="NewWaveWaitTime" to="." method="_on_NewWaveWaitTime_timeout"]
